| Summary: | ASTERISK-25610: Asterisk crash during "sip reload" | ||
| Reporter: | Dudás József (formater) | Labels: | |
| Date Opened: | 2015-12-04 08:29:58.000-0600 | Date Closed: | 2015-12-07 12:43:49.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/General |
| Versions: | 11.20.0 13.6.0 | Frequency of Occurrence | Frequent |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace.txt ( 1) backtrace2.txt ( 2) gdb.txt ( 3) gdb2.txt | |
| Description: | Asterisk crashes sometimes when we issue sip reload. (As seen from back trace, issue is at main/ccss.c, ast_cc_config_params_destroy's ast_free, which is called by destroy peer, which is called by sip reload.)
I attached 2 different backtraces from 2 crashes, as I see both crash started with 'sip reload', but crashed for different reasons according back trace. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-12-04 08:30:00.360-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Richard Mudgett (rmudgett) 2015-12-04 12:00:59.320-0600 Both crashes are the result of a reentrancy problem with the global bogus_peer being updated by sip_reload(). The bogus_peer needs to be protected using AO2_GLOBAL_OBJ_STATIC() and the associated accessor/manipulation functions. By: Richard Mudgett (rmudgett) 2015-12-04 16:02:36.480-0600 Patch up on gerrit: https://gerrit.asterisk.org/#/c/1764/ v11 https://gerrit.asterisk.org/#/c/1765/ v13 https://gerrit.asterisk.org/#/c/1766/ master | ||